--- a/src/app/upload-certificate/upload-certificate.component.html
+++ b/src/app/upload-certificate/upload-certificate.component.html
@@ -30,11 +30,11 @@
                 <div class="col-12 col-lg-6">
                     <span class="pointer">
                         <select [(ngModel)]="eventId" class="box-border">
-                            <option value="1">Master royal cup 2022</option>
-                            <option value="2">Grand Prix international 2022</option>
-                            <option value="3">State level silambam Tournament</option>
-                            <option value="'4">TN open championship 2021</option>
-                            <option value="5">Silimbam Interdistrict 2021</option>
+                            <option *ngFor="let item of items" [value]="item.eventId">{{item.eventName}}</option>
+                            <!-- <option>Grand Prix international 2022</option>
+                            <option>State level silambam Tournament</option>
+                            <option>TN open championship 2021</option>
+                            <option>Silimbam Interdistrict 2021</option> -->
                         </select>
                     </span>
                 </div>
